<resources>
    <string name="app_name">Juancho</string>
    <string name="user_name">Nombre de Usuario</string>
    <string name="password">Contraseña</string>
    <string name="text_button_login">Login</string>
    <string name="not_have_account">¿No tienes cuenta?, </string>
    <string name="create_here">crea una aquí</string>
    <string name="hint_email">Correo</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_user">Usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="confirm_hint_password">Confirmar Contraseña</string>
    <string name="text_button_create_account">UNETE</string>
    <string name="toolbar_create_account">CREAR CUENTA</string>
    <string name="user_name_card">BEBE YODA</string>
    <string name="first_word_card">Hace</string>
    <string name="time_card">4 Días</string>
    <string name="tab_search">Buscar</string>
    <string name="tab_home">Home</string>
    <string name="tab_profile">Profile</string>
    <string name="like_number_card">10 Me Gusta</string>
</resources>