<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_card_view"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    cardview:cardCornerRadius="@dimen/corner_radius_card_view">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/pictureCard"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_card_view"
            android:background="@drawable/yoda"
            android:scaleType="centerCrop">
        </ImageView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="bottom"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:background="@color/background_text_card">
            <TextView
                android:id="@+id/userNameCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name_card"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_user_name_card"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/firstWord"
                    android:text="@string/first_word_card"
                    android:textColor="@color/white"
                    android:textSize="@dimen/first_word_text_size"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/timeCard"
                    android:text="@string/time_card"
                    android:textColor="@color/white"
                    android:textSize="@dimen/first_word_text_size"
                    android:layout_marginLeft="@dimen/time_card_margin_left_card"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/like_margin_top_card">
                <CheckBox
                    android:id="@+id/likeCheckCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/checkbox_selector"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/likeNumberCard"
                    android:text="@string/like_number_card"
                    android:textColor="@color/white"
                    android:textSize="@dimen/first_word_text_size"
                    android:layout_marginLeft="@dimen/time_card_margin_left_card"/>
            </LinearLayout>

        </LinearLayout>
    </FrameLayout>
</androidx.cardview.widget.CardView>